@@ -324,9 +324,6 @@ FSL_TEST_FUNCTION(url_join) {
             "https://loc:45/some/file.html");
     FSL_CHECK_EQ(url(base, "./where").as_string(), "https://loc:45/some/where");
     FSL_CHECK_EQ(url(base, "../where").as_string(), "https://loc:45/where");
-    /// **TODO** The below test needs to throw rather than
-    FSL_CHECK_EQ(
-            url(base, "../../where").as_string(), "https://loc:45/../where");
     FSL_CHECK_EQ(url(base, ".").as_string(), "https://loc:45/some/");
     FSL_CHECK_EQ(url(base, "?q").as_string(), "https://loc:45/some/path?q");
     FSL_CHECK_EQ(
@@ -334,6 +331,12 @@ FSL_TEST_FUNCTION(url_join) {
     FSL_CHECK_EQ(
             url(base, "#fr").as_string(),
             "https://loc:45/some/path?query=yes#fr");
+    FSL_CHECK_EQ(
+            url(base, "#").as_string(),
+            "https://loc:45/some/path?query=yes#");
+    /// **TODO** The below test needs to throw rather than
+    FSL_CHECK_EQ(
+            url(base, "../../where").as_string(), "https://loc:45/../where");
 }
 
 
