@@ -203,7 +203,7 @@ namespace fostlib {
             path = *(qi::standard_wide::char_ - '?' - '#');
             query = qi::omit[qi::char_('?')]
                     >> *(qi::standard_wide::char_ - '#');
-            fragment = qi::omit[qi::char_('#')] >> *qi::standard_wide::char_;
+            fragment = qi::char_('#') >> *qi::standard_wide::char_;
         }
     };
 
